# DCB-Parser

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
service/: __init__.py  config.py  main.py
src/cibil_parser/: __init__.py  cli.py  extract.py  models.py  pipeline.py  section_detector.py  template_registry.py
src/cibil_parser/section_parsers/: __init__.py  account_parser.py  address_parser.py  consumer_info_parser.py  email_parser.py  employment_parser.py  enquiry_parser.py  header_parser.py  summary_parser.py  utils.py
